--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,10 @@
-# Build stage
+# Build stage (actually unnecessary, but keeping minimal cleanup)
 FROM node:23-alpine as builder
 
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
-RUN npm run build
 
 # Production stage
 FROM node:23-alpine
@@ -15,9 +14,7 @@ ENV NODE_ENV=production
 
 COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/migrations ./migrations
-COPY --from=builder /app/seeders ./seeders
+COPY --from=builder /app ./  # copy entire source code
 
 EXPOSE 5000
-CMD ["node", "dist/app.js"]
+CMD ["node", "app.js"]
