--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,7 +10,9 @@ RUN npm run build
 # Production stage
 FROM nginx:alpine
 
-COPY --from=builder /app/dist/frontend /usr/share/nginx/html
+# Use correct path based on angular.json outputPath
+COPY --from=builder /app/dist/letter /usr/share/nginx/html
+
 COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
-EXPOSE 80
+EXPOSE 81
