--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,27 +1,30 @@
 # Build Stage
-FROM node:23-alpine as builder
+FROM node:18-alpine as builder
 
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY frontend/package*.json ./
+# Copy package files first for better caching
+COPY package*.json ./
 
 # Install dependencies
 RUN npm ci
 
-# Copy the Angular source code
-COPY frontend/ ./
+# Copy all source files
+COPY . .
 
-# Build the Angular app for production
-RUN npm run build --prod
+# Build Angular app with production configuration
+RUN npm run build -- --output-path=dist --configuration=production
 
 # Production Stage
 FROM nginx:alpine
 
-# Copy the built Angular app to the Nginx container
-COPY --from=builder /app/dist/letter /usr/share/nginx/html
+# Remove default Nginx config
+RUN rm -rf /etc/nginx/conf.d/default.conf
 
-# Copy the Nginx configuration file (ensure this path is correct)
-COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
+# Copy custom Nginx config
+COPY nginx/nginx.conf /etc/nginx/conf.d
+
+# Copy built Angular files
+COPY --from=builder /app/dist /usr/share/nginx/html
 
 EXPOSE 80
