--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,16 +4,16 @@ FROM node:18-alpine as builder
 WORKDIR /app
 
 # Copy package files first for better caching
-COPY package*.json ./
+COPY frontend/package*.json ./
 
 # Install dependencies
 RUN npm ci
 
 # Copy all source files
-COPY . .
+COPY frontend/ .
 
 # Build Angular app with production configuration
-RUN npm run build -- --output-path=dist --configuration=production
+RUN npm run build -- --output-path=dist/letter --configuration=production
 
 # Production Stage
 FROM nginx:alpine
@@ -21,10 +21,10 @@ FROM nginx:alpine
 # Remove default Nginx config
 RUN rm -rf /etc/nginx/conf.d/default.conf
 
-# Copy custom Nginx config
+# Copy custom Nginx config from root nginx folder
 COPY nginx/nginx.conf /etc/nginx/conf.d
 
 # Copy built Angular files
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/dist/letter /usr/share/nginx/html
 
 EXPOSE 80
