--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,11 @@
 server {
     listen 80;
-    server_name yourdomain.com;
+    server_name localhost;
+
+    root /usr/share/nginx/html;
+    index index.html;
 
     location / {
-        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
     }
 
@@ -12,6 +14,5 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
