--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     root /usr/share/nginx/html;
-    index index.html;
+    index browser/index.html;
 
     location / {
         try_files $uri $uri/ browser/index.html;
